Running through the different sub-sections

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -1,12 +1,12 @@
 ## Units and Quantities {#sec:units}
 
 At a basic level, `yt` is an engine for converting data dumped to disk by a simulation code into a physically meaningful result.
-Attaching units to simulation data makes it possible to perform dimensional analysis on the simulation data, adding additional opportunities for catching errors in a data processing pipeline.
+Attaching physical units to simulation data makes it possible to perform dimensional analysis on the simulation data, adding additional opportunities for catching errors in a data processing pipeline.
 In addition, it becomes straightforward to convert data from one unit system to another.
 
 In `yt` 4.0 we handle units in a an automatic fashion, leveraging the symbolic math library `sympy`.
-Instead of returning a NumPy `ndarray` when users query `yt` data objects for fields, return a `unyt_array`, a subclass of `ndarray`.
-`unyt_array` preserves `ndarray`'s array operations, including deep and shallow copies, broadcasting, and views.
+Instead of returning a NumPy `ndarray` when users query `yt` data objects for fields, we return a `unyt_array`, a subclass of `ndarray`.
+`unyt_array` preserves `ndarray`'s array operations, including deep and shallow copies, broadcasting, views, and mathematical operations.
 Augmenting `ndarray`, `unyt_array` attaches unit metadata to the array data, enabling runtime checking of unit consistency in arithmetic operations between `unyt_array` instances, and making it trivial to compose new units using algebraic operations.
 
 As a trivial example, when one queries a data object (here given the generic name `dd`) for the density field, we get back a `unyt_array``, including both the simulation data for the density field, and the units of the density field, in this case $\rm{g}/\rm{cm}^3$:
@@ -39,11 +39,11 @@ For scalar data, we have created the new `unyt_quantity` class.
 
 If a user needs the field in a different unit system, they can quickly convert using `convert_to_units` or `in_units`.
 
-When a `Dataset` object is instantiated, it will its self instantiate and set up a `UnitRegistry` class that contains a full set of units that are defined for the simulation. This registry includes both concrete physical units like `cm` or `K` but also units symbols that correspond to the unit system used internally in the simulation.
+When a `Dataset` object is instantiated, it will itself instantiate and set up a `UnitRegistry` class that contains a full set of units that are defined for the simulation. This registry includes not only concrete physical units like `cm` or `K`, but also unit symbols that correspond to the unit system used internally in the simulation.
 
-The new unit systems lets us to encode the simulation coordinate system and scaling to physical coordinates directly into the unit system. We do this via "code units".
+The `Dataset`-specific `UnitRegistry` also lets us encode the simulation coordinate system and scaling to physical coordinates directly into the unit system. We do this via "code units".
 
-Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit`, attribute that the user can quickly and easily query to discover the base units of the simulation. For example:
+Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit` attributes that the user can quickly and easily query to discover the base units of the simulation. For example:
 
 ```python
 >>> import yt
@@ -56,14 +56,13 @@ Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit`, attribute tha
 5.555172850264421e+26 cm
 ```
 
-Optionally `velocity_unit`, `pressure_unit`, `temperature_unit`, and `density_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
+Optionally, `velocity_unit`, `pressure_unit`, `temperature_unit`, `magnetic_unit`, and `density_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
 
 Additionally, we allow conversions to the simulation unit system.
 Data in code units are available by converting to `code_length`, `code_mass`, `code_time`, `code_velocity`, `code_density`, `code_magnetic`, `code_pressure`, `code_metallicity`, or any combination of those units.
-Code units preserve dimensionality: an array or quantity that has units of `cm` will be convertible to `code_length`, but not to `code_mass`.
+Code units preserve dimensionality: an array or quantity that has units of `cm` will be convertible to `code_length`.
 
-On-disk data are also be available to the user, presented in unconverted code units.
-To obtain on-disk data, a user need only query a data object using an on-disk field name:
+On-disk fields are presented in these unconverted code units. To obtain on-disk data, a user need only query a data object using an on-disk field name:
 
 ```python
 >>> import yt
@@ -78,7 +77,7 @@ To obtain on-disk data, a user need only query a data object using an on-disk fi
 ```
 
 Here, the first data object query is returned in code units, while the second is returned in CGS units.
-This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field.
+This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field, aliased to the former. 
 
 ### Implementation {#sec:units_implementation}
 
