Fixing issues with text

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -9,7 +9,7 @@ Instead of returning a NumPy `ndarray` when users query `yt` data objects for fi
 `unyt_array` preserves `ndarray`'s array operations, including deep and shallow copies, broadcasting, views, and mathematical operations.
 Augmenting `ndarray`, `unyt_array` attaches unit metadata to the array data, enabling runtime checking of unit consistency in arithmetic operations between `unyt_array` instances, and making it trivial to compose new units using algebraic operations.
 
-As a trivial example, when one queries a data object (here given the generic name `dd`) for the density field, we get back a `unyt_array``, including both the simulation data for the density field, and the units of the density field, in this case $\rm{g}/\rm{cm}^3$:
+As a trivial example, when one queries a data object (here given the generic name `dd`) for the density field, we get back a `unyt_array`, including both the simulation data for the density field, and the units of the density field, in this case $\rm{g}/\rm{cm}^3$:
 
 ```python
 >>> dd['density'] 
@@ -17,7 +17,7 @@ unyt_array([4.92e-31, 4.94e-31, 4.93e-31, ...,
             1.12e-25, 1.59e-25, 1.09e-24], 'g/cm**3')
 ```
 
-One of the nicest aspects of this new unit system is that the symbolic algebra for unitful operations is performed automatically by sympy:
+One of the nicest aspects of this new unit system is that the symbolic algebra for unitful operations is performed automatically by `sympy`:
 
 ```python
 >>> print(dd['mass']/dd['cell_volume'])
@@ -41,7 +41,7 @@ If a user needs the field in a different unit system, they can quickly convert u
 
 When a `Dataset` object is instantiated, it will itself instantiate and set up a `UnitRegistry` class that contains a full set of units that are defined for the simulation. This registry includes not only concrete physical units like `cm` or `K`, but also unit symbols that correspond to the unit system used internally in the simulation.
 
-The `Dataset`-specific `UnitRegistry` also lets us encode the simulation coordinate system and scaling to physical coordinates directly into the unit system. We do this via "code units".
+The `Dataset`-specific `UnitRegistry` also lets us encode the simulation unit system and scaling to physical units directly into `yt`. We do this via "code units".
 
 Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit` attributes that the user can quickly and easily query to discover the base units of the simulation. For example:
 
@@ -56,7 +56,7 @@ Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit` attributes tha
 5.555172850264421e+26 cm
 ```
 
-Optionally, `velocity_unit`, `pressure_unit`, `temperature_unit`, `magnetic_unit`, and `density_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
+Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, `temperature_unit`, and `magnetic_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
 
 Additionally, we allow conversions to the simulation unit system.
 Data in code units are available by converting to `code_length`, `code_mass`, `code_time`, `code_velocity`, `code_density`, `code_magnetic`, `code_pressure`, `code_metallicity`, or any combination of those units.
@@ -68,10 +68,10 @@ On-disk fields are presented in these unconverted code units. To obtain on-disk 
 >>> import yt
 >>> ds = yt.load("Enzo_64/DD0043/data0043")
 >>> dd = ds.all_data()
->>> print(dd[('enzo', 'Density')])
+>>> print(dd["enzo", "Density"])
 [6.74e-02 6.12e-02 8.92e-02 ... 
  9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
->>> print(dd[('gas', 'density')])
+>>> print(dd["gas", "density"])
 [1.92e-31 1.74e-31 2.54e-31 ... 
  2.59e-28 1.61e-28 1.22e-28] g/cm**3
 ```
@@ -83,30 +83,28 @@ This is because `("enzo", "Density")` is an on-disk field, while `("gas", "densi
 
 Our unit system has 6 base dimensions, `mass`, `length`, `time`, `temperature`, and `angle`.
 The unitless `dimensionless` dimension, which we use to represent scalars is also technically a base dimension, although a trivial one.
-For convenience, we also create dimensionless unit symbols to represent quantities like metallicity that are formally dimensionless, but it is convenient to represent in a unit system.
+For convenience, we also create dimensionless unit symbols to represent quantities like metallicity that are formally dimensionless, but convenient to represent in a unit system.
 
-For each dimension, we choose a base unit.
-Our system's base units are grams, centimeters, seconds, Kelvin, and radian.
-All units can be described as combinations of these base dimensions along with a conversion factor to equivalent base units.
+For each dimension, we choose a base unit. The default base units in `yt` are the "Gaussian" cgs system, with grams, centimeters, seconds, Kelvin, and radians. All units can be described as combinations of these base dimensions along with a conversion factor to equivalent base units.
 
 The choice of CGS as the base unit system is somewhat arbitrary.
 Most unit systems choose SI as the reference unit system.
 We use CGS to stay consistent with the rest of the `yt` codebase and to reflect the standard practice in astrophysics.
-In any case, using a **physical** coordinate system makes it possible to compare quantities and arrays produced by different datasets, possibly with different conversion factors to CGS and to code units.
+In any case, using a **physical** unit system makes it possible to compare quantities and arrays produced by different datasets, possibly with different conversion factors to CGS and to code units.
 We go into more detail on this point below.
-In the future, we plan to make the preferred internal coordinate system a user-configurable option.
+In the future, we plan to make the preferred internal unit system a user-configurable option.
 
 We provide sympy `Symbol` objects for the base dimensions.
-The dimensionality of all other units should be `sympy` `Expr` objects made up of the base dimension objects and the `sympy` operation objects `Mul` and `Pow`.
+The dimensionality of all other units are `sympy` `Expr` objects made up of the base dimension objects and the `sympy` operation objects `Mul` and `Pow`.
 
-Let's use some common units as examples: gram (`g`), erg (`erg`), and solar mass per cubic megaparsec (`Msun / Mpc`$^3$).
-`g` is an atomic, CGS base unit, `erg` is an atomic unit in CGS, but is not a base unit, and `Msun/Mpc`$^3$ is a combination of atomic units, which are not in CGS, and one of them even has an SI prefix.
+Let us first take some common units as examples: gram (`g`), erg (`erg`), and solar mass per cubic megaparsec (`Msun / Mpc**3`).
+`g` is an "atomic", CGS base unit, `erg` is an atomic unit in CGS, but is not a base unit, and `Msun / Mpc**3` is a combination of atomic units, which are not in CGS, and one of them even has an SI prefix.
 The dimensions of `g` are `mass` and the cgs factor is 1.
-The dimensions of `erg` are `mass * length$^2`$ * `time`$^{-2}$ and the cgs factor is 1.
-The dimensions of `Msun/Mpc`$^3$ are `mass / length`$^3$ and the cgs factor is about 6.8e-41.
+The dimensions of `erg` are `mass * length**2 / time**2` and the cgs factor is 1.
+The dimensions of `Msun / Mpc**3` are `mass / length**3` and the cgs factor is about $6.8 \times 10^{-41}$.
 
 We use the `UnitRegistry` class to define all valid atomic units.
-All unit registries contain a unit symbol lookup table (dict) containing the valid units' dimensionality and cgs conversion factor.
+All unit registries contain a unit symbol lookup table (`dict``) containing the valid units' dimensionality and cgs conversion factor.
 Here is what it would look like with the above units:
 
 ```python
@@ -119,10 +117,10 @@ Here is what it would look like with the above units:
 Note that we only define **atomic** units here.
 There should be no operations in the registry symbol strings.
 When we parse non-atomic units like `Msun/Mpc**3`, we use the registry to look up the symbols.
-The unit system in yt knows how to handle units like `Mpc` by looking up unit symbols with and without prefixes and modify the conversion factor appropriately.
+The unit system in `yt` knows how to handle units like `Mpc` by looking up unit symbols with and without prefixes and modify the conversion factor appropriately.
 
 We construct a `Unit` object by providing a string containing atomic unit symbols, combined with operations in Python syntax, and the registry those atomic unit symbols are defined in.
-We use sympy's string parsing features to create the unit expression from the user-provided string.
+We use `sympy`'s string parsing features to create the unit expression from the user-provided string.
 
 `Unit` objects are associated with four instance members, a unit `Expression` object, a dimensionality `Expression` object, a `UnitRegistry` instance, and a scalar conversion factor to CGS units.
 These data are available for a `Unit` object by accessing the `expr`, `dimensions`, `registry`, and `cgs_value` attributes, respectively.
@@ -133,7 +131,7 @@ These data are available for a `Unit` object by accessing the `expr`, `dimension
 The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods which allows users to add, remove, and modify atomic unit definitions present in `UnitRegistry` objects.
 A dictionary lookup table is also attached to the `UnitRegistry` object, providing an interface to look up unit symbols.
 In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata.
-Once a unit object is created, it will not receive updates if the original unit registry is modified.
+Once a `Unit` object is created, it will not receive updates if the original unit registry is modified.
 
 ### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
@@ -143,9 +141,9 @@ There are two ways to create new array and quantity objects: via a constructor, 
 
 The primary internal interface for creating new arrays and quantities is through the class constructor for `unyt_array`.
 The constructor takes three arguments.
-The first argument is the input scalar data, which can be an integer, float, list, or array.
+The first argument is the input data, which can be an integer, float, list, or array.
 The second argument, `input_units`, is a unit specification which must be a string or `Unit` instance.
-Last, users may optionally supply a UnitRegistry instance, which will be attached to the array.
+Last, users may optionally supply a `UnitRegistry` instance, which will be attached to the array.
 If no `UnitRegistry` is supplied, a default unit registry is used instead.
 Unit specification strings must be algebraic combinations of unit symbol names, using standard Python mathematical syntax (i.e.
 `**` for the power function, not `^`).
@@ -161,7 +159,7 @@ unyt_quantity(3, 'J')
 ```
 
 In addition to the class constructor, we have also defined two convenience functions, `quan`, and `arr`, for quantity and array creation that are attached to the `Dataset` base class.
-These were added to syntactically simplify the creation of arrays with the UnitRegistry instance associated with a dataset.
+These were added to syntactically simplify the creation of arrays with the `UnitRegistry` instance associated with a dataset.
 These functions work exactly like the `unyt_array` and `unyt_quantity` constructors, but pass the `UnitRegistry` instance attached to the dataset to the underlying constructor call.
 For example:
 
@@ -172,7 +170,7 @@ For example:
 unyt_array([5.55e+26, 1.11e+27, 1.66e+27], 'cm')
 ```
 
-This example illustrates that the array is being created using `ds.unit_registry`, rather than the `default_unit_registry`, for which `code_length` is equivalent to `cm`.
+This example illustrates that the array is being created using `ds.unit_registry`, rather than the `default_unit_registry` in `yt`.
 
 #### Multiplication {#sec:multiplication}
 
@@ -207,16 +205,14 @@ True
 ### Handling code units {#sec:handling-code-units}
 
 Code units are tightly coupled to on-disk parameters.
-To handle this fact of life, the `yt` unit system can modify, add, and remove unit symbols via the `UnitRegistry`.
+To handle this, the `yt` unit system can modify, add, and remove unit symbols via the `UnitRegistry`.
 
 #### Associating arrays with a coordinate system {#sec:associating-arrays-with-a-coordinate-system}
 
 To create quantities and arrays in units defined by a simulation coordinate system, we associate a `UnitRegistry` instance with `Dataset` instances.
 This unit registry contains the metadata necessary to convert the array to CGS from some other known unit system and is available via the `unit_registry` attribute that is attached to all `Dataset` instances.
 
-We have modified the definition for `set_code_units` in the `Dataset` base class.
-In this new implementation, the predefined `code_mass`, `code_length`, `code_time`, and `code_velocity` symbols are adjusted to the appropriate values and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit` attributes are attached to the `Dataset` instance.
-If there are frontend specific code units they should also be defined in subclasses by extending this function.
+In the `set_code_units` method of the `Dataset` base class, the predefined `code_mass`, `code_length`, `code_time`, `code_velocity`, and `code_magnetic` symbols are adjusted to the appropriate values, and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit`, and `magnetic_unit` attributes are attached to the `Dataset` instance. If there are frontend-specific code units, they should also be defined in subclasses by extending this function.
 
 #### Mixing modified unit registries {#sec:mixing-modified-unit-registries}
 
