Adding more text and moving stuff around--not finished with that part yet

--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -1,10 +1,11 @@
 ## Units and Quantities {#sec:units}
 
-At a basic level, `yt` is an engine for converting data dumped to disk by a simulation code into a physically meaningful result.
+At a basic level, `yt` is an engine for converting data created by a simulation code into a physically meaningful result.
 Attaching physical units to simulation data makes it possible to perform dimensional analysis on the simulation data, adding additional opportunities for catching errors in a data processing pipeline.
 In addition, it becomes straightforward to convert data from one unit system to another.
 
-In `yt` 4.0 we handle units in a an automatic fashion, leveraging the symbolic math library `sympy`.
+In `yt` 4.0 we handle units in a an automatic fashion, with a symbolic units system. Originally part of `yt` itself, the unit system has now been split off into a standalone package, `unyt`. `unyt` leverages the symbolic math library `sympy` in combination with NumPy.
+
 Instead of returning a NumPy `ndarray` when users query `yt` data objects for fields, we return a `unyt_array`, a subclass of `ndarray`.
 `unyt_array` preserves `ndarray`'s array operations, including deep and shallow copies, broadcasting, views, and mathematical operations.
 Augmenting `ndarray`, `unyt_array` attaches unit metadata to the array data, enabling runtime checking of unit consistency in arithmetic operations between `unyt_array` instances, and making it trivial to compose new units using algebraic operations.
@@ -17,7 +18,7 @@ unyt_array([4.92e-31, 4.94e-31, 4.93e-31, ...,
             1.12e-25, 1.59e-25, 1.09e-24], 'g/cm**3')
 ```
 
-One of the nicest aspects of this new unit system is that the symbolic algebra for unitful operations is performed automatically by `sympy`:
+One of the nicest aspects of the unit system is that the symbolic algebra for unitful operations is performed automatically by `sympy`:
 
 ```python
 >>> print(dd['mass']/dd['cell_volume'])
@@ -26,7 +27,7 @@ One of the nicest aspects of this new unit system is that the symbolic algebra f
 ```
 
 `unyt_array` is primarily useful for attaching units to NumPy `ndarray` instances.
-For scalar data, we have created the new `unyt_quantity` class.
+For scalar data, we have created the `unyt_quantity` class.
 `unyt_quantity` is a subclass of `unyt_array` with the requirement that the "array data" associated with the instance be limited to one element.
 `unyt_quantity` is primarily useful for physical constants and ensures that the units are propagated correctly when composing quantities from arrays, physical constants, and unitless scalars:
 
@@ -37,49 +38,9 @@ For scalar data, we have created the new `unyt_quantity` class.
  1.63e-12 1.59e-12 1.40e-12] erg
 ```
 
-If a user needs the field in a different unit system, they can quickly convert using `convert_to_units` or `in_units`.
+In what follows, we will refer to both array and scalar quantities as arrays generically for the purpose of brevity.
 
-When a `Dataset` object is instantiated, it will itself instantiate and set up a `UnitRegistry` class that contains a full set of units that are defined for the simulation. This registry includes not only concrete physical units like `cm` or `K`, but also unit symbols that correspond to the unit system used internally in the simulation.
-
-The `Dataset`-specific `UnitRegistry` also lets us encode the simulation unit system and scaling to physical units directly into `yt`. We do this via "code units".
-
-Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit` attributes that the user can quickly and easily query to discover the base units of the simulation. For example:
-
-```python
->>> import yt
->>> ds = yt.load("Enzo_64/DD0043/data0043")
->>> print(ds.length_unit)
-128 Mpccm/h
->>> print(ds.quan(1.0, "code_length").in_units("Mpccm/h"))
-128.0 Mpccm/h
->>> print(ds.length_unit.in_cgs())
-5.555172850264421e+26 cm
-```
-
-Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, `temperature_unit`, and `magnetic_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
-
-Additionally, we allow conversions to the simulation unit system.
-Data in code units are available by converting to `code_length`, `code_mass`, `code_time`, `code_velocity`, `code_density`, `code_magnetic`, `code_pressure`, `code_metallicity`, or any combination of those units.
-Code units preserve dimensionality: an array or quantity that has units of `cm` will be convertible to `code_length`.
-
-On-disk fields are presented in these unconverted code units. To obtain on-disk data, a user need only query a data object using an on-disk field name:
-
-```python
->>> import yt
->>> ds = yt.load("Enzo_64/DD0043/data0043")
->>> dd = ds.all_data()
->>> print(dd["enzo", "Density"])
-[6.74e-02 6.12e-02 8.92e-02 ... 
- 9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
->>> print(dd["gas", "density"])
-[1.92e-31 1.74e-31 2.54e-31 ... 
- 2.59e-28 1.61e-28 1.22e-28] g/cm**3
-```
-
-Here, the first data object query is returned in code units, while the second is returned in CGS units.
-This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field, aliased to the former. 
-
-### Implementation {#sec:units_implementation}
+### Implementation {#sec:units-implementation}
 
 Our unit system has 6 base dimensions, `mass`, `length`, `time`, `temperature`, and `angle`.
 The unitless `dimensionless` dimension, which we use to represent scalars is also technically a base dimension, although a trivial one.
@@ -132,6 +93,39 @@ The `UnitRegistry` class provides the `add`, `remove`, and `modify` methods whic
 A dictionary lookup table is also attached to the `UnitRegistry` object, providing an interface to look up unit symbols.
 In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata.
 Once a `Unit` object is created, it will not receive updates if the original unit registry is modified.
+
+When a `Dataset` object is instantiated, it will itself instantiate and set up a `UnitRegistry` class that contains a full set of units that are defined for the simulation. This registry includes not only concrete physical units like `cm` or `K`, but also unit symbols that correspond to the unit system used internally in the simulation.
+
+The `Dataset`-specific `UnitRegistry` also lets us encode the simulation unit system and scaling to physical units directly into `yt`. We do this via "code units". Every `Dataset` has a `length_unit`, `time_unit`, and `mass_unit` attributes that the user can quickly and easily query to discover the base units of the simulation. For example:
+
+```python
+>>> import yt
+>>> ds = yt.load("Enzo_64/DD0043/data0043")
+>>> print(ds.length_unit)
+128 Mpccm/h
+>>> print(ds.quan(1.0, "code_length").in_units("Mpccm/h"))
+128.0 Mpccm/h
+>>> print(ds.length_unit.in_cgs())
+5.555172850264421e+26 cm
+```
+
+### Unit conversions {#sec:unit-conversions}
+
+If a user needs the array in a different unit system, they can quickly convert using `convert_to_units`, which changes the units of an array in-place, or `in_units`, which returns a copy of the array. 
+
+
+#### Equivalencies {#sec:equivalencies}
+
+In certain circumstances, conversion from one quantity to another with different dimensions is desired. This is the case for a number of frequently encountered, physically-motivated transformations which involve physical constants, such as:
+
+* Conversions between temperature and energy via $E = k_BT$
+* Conversions between wavelength, frequency, and energy for light via $E = h\nu = hc/\lambda$
+* Conversions between mass and energy via $E = mc^2$
+* Conversions between velocity and Lorentz factor via $\gamma = 1/\sqrt{1-v^2/c^2}$
+* Conversions between mass and Schwarzschild radius of a black hole via $R_s = 2GM/c^2$
+* Conversions between mass and Compton wavelength of a particle via $\lambda = h/mc$
+
+As described above, conversions between quantities in different 
 
 ### Creating unyt_array and unyt_quantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
@@ -204,8 +198,30 @@ True
 
 ### Handling code units {#sec:handling-code-units}
 
-Code units are tightly coupled to on-disk parameters.
-To handle this, the `yt` unit system can modify, add, and remove unit symbols via the `UnitRegistry`.
+Code units are tightly coupled to on-disk parameters. To handle this, the `yt` unit system can modify, add, and remove unit symbols via the `UnitRegistry`.
+
+Optionally, `velocity_unit`, `density_unit`, `pressure_unit`, `temperature_unit`, and `magnetic_unit` may be defined as well if the units for these fields cannot be inferred from the mass, length, and time units.
+
+We also allow conversions to the simulation unit system. Data in code units are available by converting to `code_length`, `code_mass`, `code_time`, `code_velocity`, `code_density`, `code_magnetic`, `code_pressure`, `code_metallicity`, or any combination of those units.
+Code units preserve dimensionality: an array or quantity that has units of `cm` will be convertible to `code_length`.
+
+On-disk fields are presented in these unconverted code units. To obtain on-disk data, a user need only query a data object using an on-disk field name:
+
+```python
+>>> import yt
+>>> ds = yt.load("Enzo_64/DD0043/data0043")
+>>> dd = ds.all_data()
+>>> print(dd["enzo", "Density"])
+[6.74e-02 6.12e-02 8.92e-02 ... 
+ 9.09e+01 5.66e+01 4.27e+01] code_mass/code_length**3
+>>> print(dd["gas", "density"])
+[1.92e-31 1.74e-31 2.54e-31 ... 
+ 2.59e-28 1.61e-28 1.22e-28] g/cm**3
+```
+
+Here, the first data object query is returned in code units, while the second is returned in CGS units.
+This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field, aliased to the former. 
+
 
 #### Associating arrays with a coordinate system {#sec:associating-arrays-with-a-coordinate-system}
 
