--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -15,7 +15,12 @@ However, balancing the needs of a community requiring stable methods for analyzi
 
 In general, the development of `yt` is reasonably top-heavy, with the majority of contributions coming from a core group of individuals.
 We discuss the implications of this on sustainability in Section @sec:sustainability, and provide here a graph of the contributions over time.
-
+Of particular note is that the development history of yt is also highly bifurcated between version control systems and developer practice.
+In the past, yt developers tended to commit frequently and include all of the individual development history of individual features or bug fixes.
+Recent practice, however, is more inclined toward commit "squashing," where multiple commits are combined into a single commit with the same net effect, or commit rebasing, where changes are included linearly rather than through a branched history.
+One result of this is in figures such as Figure @fig:commit-graph, some contributors appear to have made a smaller quantity of contributions than an informed observer would recognize.
+Specifically, this applies to Clément Robert, who has contributed a considerable amount of change to the code base but has done so in a way that does not maximize the "statistics" presented below.
+This particular bias, toward contributions measured in count, is one that affects other members of the community as well, especially those whose participation is through community engagement, documentation, tutorials, and mentoring, rather than through direct modifications of the code base.
 
 <div id="figure-commit-graph"></div>
 
