Fix the PR stats URL

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -118,7 +118,7 @@ Pull requests merged into the source code as a function of time.
 var prGraphSpecification = {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
   "data": {
-    "url": "image/pr_stats.csv",
+    "url": "images/pr_stats.csv",
     "name": "prs",
     "format": {"parse": {"createdAt": "date", "closedAt": "date"}}
   },
