Improve some responsiveness

--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -37,7 +37,9 @@ Commits to the source code as a function of time.
 <script>
 var commitGraphSpecification = {
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
-  "data": {"url": "images/yt_repo.json"},
+  "data": {
+    "url": "images/yt_repo.json"
+  },
   "transform": [
     {
       "timeUnit": "yearquarter",
@@ -51,8 +53,13 @@ var commitGraphSpecification = {
   ],
   "hconcat": [
     {
-      "params": [{"name": "commit_range", "select": {"type": "interval", "encodings": ["x"]}}],
-      "mark": "bar",
+      "params": [
+        {
+          "name": "commit_range",
+          "select": {"type": "interval", "encodings": ["x"]}
+        }
+      ],
+      "mark": {"type": "bar", "binSpacing": 0},
       "encoding": {
         "y": {
           "aggregate": "sum",
@@ -63,6 +70,7 @@ var commitGraphSpecification = {
         "x": {
           "field": "commit_quarter",
           "type": "temporal",
+          "timeUnit": "yearquarter",
           "scale": {"padding": 0}
         }
       }
@@ -122,17 +130,9 @@ var prGraphSpecification = {
     "name": "prs",
     "format": {"parse": {"createdAt": "date", "closedAt": "date"}}
   },
-  "transform": [
-    {"timeUnit": "yearquarter", "field": "closedAt", "as": "closed_quarter"}
-  ],
   "vconcat": [
     {
-      "transform": [
-        {
-          "aggregate": [{"op": "count", "as": "count"}],
-          "groupby": ["closed_quarter", "author"]
-        }
-      ],
+      
       "hconcat": [
         {
           "params": [
@@ -141,19 +141,20 @@ var prGraphSpecification = {
               "select": {"type": "interval", "encodings": ["x"]}
             }
           ],
-          "mark": "bar",
+          "mark": {"type": "bar", "binSpacing": 0},
           "encoding": {
             "y": {
-              "aggregate": "sum",
-              "field": "count",
+              "aggregate": "count",
               "type": "quantitative",
               "axis": {"title": "# merged pull requests"}
             },
             "x": {
-              "field": "closed_quarter",
+              "field": "closedAt",
               "type": "temporal",
+              "bin": true,
+              "timeUnit": "yearquarter",
               "scale": {"padding": 0},
-              "axis": {"title": ""}
+              "axis": {"title": "", "labelAngle": 90}
             }
           }
         },
@@ -162,7 +163,7 @@ var prGraphSpecification = {
             {"filter": {"param": "closed_range"}},
             {
               "aggregate": [
-                {"op": "sum", "field": "count", "as": "author_count"}
+                {"op": "count", "as": "author_count"}
               ],
               "groupby": ["author"]
             },
@@ -220,7 +221,10 @@ var prGraphSpecification = {
               "type": "quantitative"
             },
             "y2": {"field": "x2"},
-            "x": {"aggregate": "count", "scale": {"type": "linear", "domain": [0, 250]}}
+            "x": {
+              "aggregate": "count",
+              "scale": {"type": "linear", "domain": [0, 250]}
+            }
           }
         },
         {
